package com.cpp.cs5800q4;

public class Course {
    private String courseName;
    private Instructor instructor;
    private Textbook textbook;

    public Course(String courseName, Instructor instructor, Textbook textbook) {
        this.courseName = courseName;
        this.instructor = instructor;
        this.textbook = textbook;
    }

    public String getCourseName() {
        return courseName;
    }

    public void setCourseName(String courseName) {
        this.courseName = courseName;
    }

    public Instructor getInstructor() {
        return instructor;
    }

    public void setInstructor(Instructor instructor) {
        this.instructor = instructor;
    }

    public Textbook getTextbook() {
        return textbook;
    }

    public void setTextbook(Textbook textbook) {
        this.textbook = textbook;
    }

    public void print() {
        System.out.println("Course Name: " + courseName);
        System.out.println("Instructor First Name: " + instructor.getFirstName());
        System.out.println("Instructor Last Name: " + instructor.getLastName());
        System.out.println("Office Number: " + instructor.getOfficeNumber());
        System.out.println("Textbook Title: " + textbook.getTitle());
        System.out.println("Textbook Author: " + textbook.getAuthor());
        System.out.println("Textbook Publisher: " + textbook.getPublisher());
    }


}

